fixed url error with trailing slash
