# docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   middleware.ErrorResponse:
     properties:
@@ -86,7 +85,7 @@ info:
     email: contact@GoCommerce.com
     name: GoCommerce Support
     url: http://GoCommerce.com
-  description: GoCommerce API is a service for leads generation and outreach..
+  description: GoCommerce API is a service for leads generation and outreach.
   license:
     name: MIT
     url: http://www.apache.org/licenses/LICENSE-2.0.html
@@ -238,4 +237,6 @@ paths:
       summary: Register new user
       tags:
       - auth
+schemes:
+- http
 swagger: "2.0"
